tests/suite/fail/generated/types/fail_assign_f64_to_i32_5.ny
fn main() {
    let x: i32 = 1.0 //~ ERROR Type mismatch
    print(0)
}
